Updated generated html structure:
added tutorials seciton

Issue: need to tutorials pages from "related pages" tab and keep them in Guide Tutorial tab instead.

--- a/tutorial/dox/tutorials_organization.dox
+++ b/tutorial/dox/tutorials_organization.dox
@@ -10,7 +10,9 @@
  */
 
 /**
- * @page Containers Containers
+ * @page Tutorials Tutorials
+ * 
+ * 
  * 
  * @subpage dynamic_array
  * @subpage linked_list
@@ -21,4 +23,5 @@
  * @subpage bst
  * @subpage rb_tree
  * @subpage graph
+ * @endinternal
  */
